--- a/OpenCVProject/OpenCVProject.vcxproj
+++ b/OpenCVProject/OpenCVProject.vcxproj
@@ -82,15 +82,15 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Classificator.h" />
-    <ClInclude Include="Fern.h" />
+    <ClInclude Include="NaiveBayes.h" />
+    <ClInclude Include="SemiNaiveBayes.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Classificator.cpp" />
-    <ClCompile Include="Fern.cpp" />
-    <ClCompile Include="OpenCVProject.cpp" />
+    <ClCompile Include="NaiveBayes.cpp" />
+    <ClCompile Include="SemiNaiveBayes.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
